--- a/notes/linear.ipynb
+++ b/notes/linear.ipynb
@@ -376,9 +376,11 @@
     "ax.set_ylabel(\"$y$ values\")\n",
     "ax.set_xlabel(\"$x$ values\")\n",
     "\n",
+    "# we're simulating data from a normal distribution around the line y = 0.5x + 0.3\n",
     "x_train = np.linspace(0, 1, num=6)\n",
     "y_train = 0.5 * x_train + 0.3 + 0.05 * np.random.randn(6)\n",
     "ax.scatter(x_train, y_train, label=\"Training data\", color='maroon', zorder=10)\n",
+    "\n",
     "x_test = np.linspace(0, 1, num=100)\n",
     "y_test = 0.5 * x_test + 0.3 + 0.05 * np.random.randn(100)\n",
     "ax.scatter(x_test, y_test, label=\"Testing data\", color='teal', zorder=10)\n",
@@ -404,7 +406,7 @@
    "source": [
     "While this is a contrived example, we can see that using a polynomial whose degree is too high might cause our data to *overfit* to the training data, and then poorly fit our testing data compared to a lower degree polynomial (in this case, a line would have been much better). Of course, if our data did represent something as complex as a fifth degree polynomial, a line would really *underfit* the data. So we always need to be careful when choosing what degree we will use for our polynomial fit. The degree can be seen as another hyperparameter.\n",
     "\n",
-    "A common way to avoid overfitting is adding some *regularization* term to our cost function. Usually, models with large parameters tend to generalize less well, so a common way to do avoid this is adding an extra term such as $\\lambda||\\boldsymbol w||^2$ to our cost function, which punishes large parameters. Note that here, $\\lambda$ would be another hyperparameter, usually called a *regularization hyperparameter*."
+    "A common way to avoid overfitting is adding some *regularization* term to our cost function. Usually, models with large parameters tend to generalize less well, so a common way to do avoid this is adding an extra term such as $\\frac{\\lambda}{2}||\\boldsymbol w||^2$ to our cost function, which punishes large parameters. Equivalently, we can add $\\lambda\\boldsymbol w$ to the gradient before updating $\\boldsymbol w$. Note that here, $\\lambda$ would be another hyperparameter, usually called the *regularization hyperparameter*."
    ]
   }
  ],
