--- a/notes/logistic.ipynb
+++ b/notes/logistic.ipynb
@@ -24,7 +24,13 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "b74004fe-e021-4d56-a2ef-e02067635806",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -180,11 +186,15 @@
     "$$\n",
     "\\mathcal J(\\boldsymbol w)\n",
     "= -\\frac 1N \\sum_{i=1}^N \\Bigl(y_i\\log\\bigl(\\sigma(\\boldsymbol w^\\top \\boldsymbol x_i)\\bigr) + (1 - y_i)\\log\\bigl(1 - \\sigma(\\boldsymbol w^\\top \\boldsymbol x_i)\\bigr)\\Bigr)$$\n",
-    "One good thing about this is that it has a nice gradient:\n",
+    "The good thing about it is that it has a nice gradient. We'll also skip the computation and accept that the gradient is\n",
     "$$\n",
+    "\\begin{align*}\n",
     "\\nabla_{\\boldsymbol w} \\mathcal J(\\boldsymbol w) \n",
-    "= - \\frac 1N \\sum_{i=1}^N (y_i - \\sigma(\\boldsymbol w^\\top \\boldsymbol x_i))\\boldsymbol x_i \n",
-    "= - \\frac 1N\\sum_{i=1}^N (y_i - \\hat y_i)\\boldsymbol x_i = -\\frac 1N \\boldsymbol X^\\top(\\boldsymbol y - \\hat{\\boldsymbol y})$$\n",
+    "&= - \\frac 1N \\sum_{i=1}^N (y_i - \\sigma(\\boldsymbol w^\\top \\boldsymbol x_i))\\boldsymbol x_i \\\\\n",
+    "&= - \\frac 1N\\sum_{i=1}^N (y_i - \\hat y_i)\\boldsymbol x_i \\\\\n",
+    "&= -\\frac 1N \\boldsymbol X^\\top(\\boldsymbol y - \\hat{\\boldsymbol y})\n",
+    "\\end{align*}\n",
+    "$$\n",
     "And now that we have that, we are actually all set to implement gradient descent!"
    ]
   },
